tests/scan/fixtures/validation/negative/clean_cargo_clean_file_watcher/src/lib.rs
//! A clean Rust crate: clean_file_watcher.

pub fn hello() -> &'static str { "hello" }
